--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -283,14 +283,21 @@
         <ul class="pagination pg-blue">
 
           <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
+          {% if products.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{products.previous_page_number}}" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
               <span class="sr-only">Previous</span>
             </a>
           </li>
+          {% endif %}
+
 
           <li class="page-item active">
+
+            <a class="page-link" href="?page={{products.number}}">{{products.number}}</a>
+          </li>
+          <!-- <li class="page-item active">
             <a class="page-link" href="#">1
               <span class="sr-only">(current)</span>
             </a>
@@ -306,14 +313,15 @@
           </li>
           <li class="page-item">
             <a class="page-link" href="#">5</a>
-          </li>
-
+          </li> -->
+          {% if products.has_next %}
           <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
+            <a class="page-link" href="?page={{products.next_page_number}}" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
               <span class="sr-only">Next</span>
             </a>
           </li>
+          {% endif %}
         </ul>
       </nav>
       <!--Pagination-->
