Add to cart functionality(backend)

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -235,7 +235,7 @@
               <div class="view overlay">
                 <img src="{{product.image.url}}" class="card-img-top"
                   alt="">
-                <a>
+                <a href = "{% url 'product' product.pk %}">
                   <div class="mask rgba-white-slight"></div>
                 </a>
               </div>
