--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,8 +2,8 @@
   <div class="container">
 
     <!-- Brand -->
-    <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-      <strong class="blue-text">MDB</strong>
+    <a class="navbar-brand waves-effect" href="{% url 'home' %}">
+      <strong class="blue-text">Hustle</strong>
     </a>
 
     <!-- Collapse -->
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <!-- Left -->
-      <ul class="navbar-nav mr-auto">
+      <!-- <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link waves-effect" href="#">Home
             <span class="sr-only">(current)</span>
@@ -33,10 +33,10 @@
           <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Free
             tutorials</a>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Right -->
-      <ul class="navbar-nav nav-flex-icons">
+      <ul class="navbar-nav nav-flex-icons" style = "float:right;">
         <li class="nav-item">
           <a class="nav-link waves-effect">
             <span class="badge red z-depth-1 mr-1"> 1 </span>
