--- a/templates/product-page.html
+++ b/templates/product-page.html
@@ -13,7 +13,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="{{product.image.url}}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -26,7 +26,7 @@
 
             <div class="mb-3">
               <a href="">
-                <span class="badge purple mr-1">Category 2</span>
+                <span class="badge purple mr-1">{{product.product_category}}</span>
               </a>
               <a href="">
                 <span class="badge blue mr-1">New</span>
@@ -37,21 +37,26 @@
             </div>
 
             <p class="lead">
+              {% if product.discount_price %}
               <span class="mr-1">
-                <del>$200</del>
+                <del>Rs. {{product.price}}</del>
               </span>
-              <span>$100</span>
+              <span>{{product.discount_price}}</span>
+              {% else %}
+              <span>{{product.price}}</span>
+              {% endif %}
+
             </p>
 
             <p class="lead font-weight-bold">Description</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa
-              sint voluptatibus!
-              Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
+            <p>{{product.descr}}</p>
 
-            <form class="d-flex justify-content-left">
+            <form class="d-flex justify-content-left" method = "POST" action = {% url 'add-to-card' %}>
               <!-- Default input -->
-              <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
+              {% csrf_token %}
+              <input type = "hidden" value = "{{product.pk}}" name = "product">
+              <input name = "quantity_ordered" type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
               <button class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
                 <i class="fas fa-shopping-cart ml-1"></i>
               </button>
@@ -93,7 +98,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
+          <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt=""> -->
 
         </div>
         <!--Grid column-->
@@ -101,7 +106,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
+          <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt=""> -->
 
         </div>
         <!--Grid column-->
@@ -109,7 +114,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
+          <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt=""> -->
 
         </div>
         <!--Grid column-->
