--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,20 @@
   {% block header_css %}
   {% endblock header_css %}
 </head>
-<body>
+<body class = "{% block body_classes %}{% endblock body_classes %}">
+
+  <div class="mt-5 pt-4">
+   {% if messages %}
+       {% for message in messages %}
+       <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+         {{ message }}
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+       </div>
+       {% endfor %}
+   {% endif %}
+   </div>
   {% include 'nav.html' %}
   {% block content %}
 
