--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block body_classes %}
+grey lighten-3
+{% endblock %}
 {% block content %}
-<body class="grey lighten-3">
+
 
 
   <!--Main layout-->
@@ -269,5 +272,5 @@
   <!--/.Footer-->
 
 
-</body>
+
 {% endblock content %}
