--- a/templates/product-page.html
+++ b/templates/product-page.html
@@ -56,13 +56,11 @@
               <!-- Default input -->
               {% csrf_token %}
               <input type = "hidden" value = "{{product.pk}}" name = "product">
-              <input name = "quantity_ordered" type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
+              <input name = "quantity_ordered" type="number" min="1" value="1" aria-label="Search" class="form-control" style="width: 100px">
               <button class="btn btn-primary btn-md my-0 p" name = "add_to_cart" type="submit">Add to cart
                 <i class="fas fa-shopping-cart ml-1"></i>
               </button>
-              <button class="btn btn-danger btn-md my-0 p" name = "remove_from_cart" type="submit">Remove from cart
-                <i class="fas fa-shopping-cart ml-1"></i>
-              </button>
+              
 
             </form>
 
