--- a/templates/payment.html
+++ b/templates/payment.html
@@ -153,44 +153,7 @@ label {
         </div>
         <!--Grid column-->
 
-        <div class="col-md-12 mb-4">
-
-          <!-- Heading -->
-          <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">{{ request.user|cart_item_count }}</span>
-          </h4>
-
-          <!-- Cart -->
-          <ul class="list-group mb-3 z-depth-1">
-            {% for order_product_ob in order.orderproduct_set.all %}
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">{{order_product_ob.quantity_ordered}} x {{order_product_ob.product.product_title}}</h6>
-                <!-- <small class="text-muted">Brief description</small> -->
-              </div>
-              <span class="text-muted">Rs. {{order_product_ob.get_item_price}}</span>
-            </li>
-            {% endfor %}
-            <li class="list-group-item d-flex justify-content-between">
-                <span>Total(Rs.)</span>
-                <strong>{{order.order_price}}</strong>
-            </li>
-          </ul>
-          <!-- Cart -->
-
-          <!-- Promo code -->
-          <form class="card p-2">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>
-              </div>
-            </div>
-          </form>
-          <!-- Promo code -->
-
-        </div>
+        {% include "order_snippet.html" %}
 
       </div>
       <!--Grid row-->
