--- a/templates/nav.html
+++ b/templates/nav.html
@@ -41,6 +41,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'order_history' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Orders </span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link waves-effect">
             <span class="clearfix d-none d-sm-inline-block"> Logout </span>
           </a>
