Login/Sign up + User Model changed + mademigrations

--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -89,7 +89,9 @@ grey lighten-3
 
 
               <hr>
-
+              <h3>
+                Billing Address
+              </h3>
               <div class = "hideable_shiping_form">
               <div class="md-form mb-5">
                 <input type = "text" placeholder="1234 Main St" name = "billing_address1" class = "form-control" id = "address">
@@ -108,7 +110,7 @@ grey lighten-3
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4">
 
-                  {{form.shipping_country}}
+                  {{form.billing_country}}
 
                   <div class="invalid-feedback">
                     Please select a valid country.
