--- a/templates/nav.html
+++ b/templates/nav.html
@@ -46,19 +46,19 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect">
+          <a class="nav-link waves-effect" href = "{% url 'logout' %}">
             <span class="clearfix d-none d-sm-inline-block"> Logout </span>
           </a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link waves-effect">
+          <a class="nav-link waves-effect" href = "{% url 'login' %}">
             <span class="clearfix d-none d-sm-inline-block"> Login </span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link waves-effect">
+          <a class="nav-link waves-effect" href = "{% url 'register' %}">
             <span class="clearfix d-none d-sm-inline-block"> Sign Up </span>
           </a>
         </li>
