--- a/templates/order-detail.html
+++ b/templates/order-detail.html
@@ -66,6 +66,12 @@
         <div class="card-body">
 
           <b style = "text-align:center;">Billing Address</b>
+          <p>{{order.billing_address.house_no}}<br>
+            {{order.billing_address.street}}<br>
+            {{order.billing_address.country}}<br>
+            {{order.billing_address.zip}}<br>
+
+          </p>
           <!-- <div class = "row">
 
           </div> -->
@@ -87,6 +93,12 @@
         <!--Card content-->
         <div class="card-body">
           <b style = "text-align:center;">Shipping Address</b>
+          <p>{{order.shipping_address.house_no}}<br>
+            {{order.shipping_address.street}}<br>
+            {{order.shipping_address.country}}<br>
+            {{order.shipping_address.zip}}<br>
+
+          </p>
 
 
           <!-- <div class = "row">
