--- a/templates/nav.html
+++ b/templates/nav.html
@@ -31,36 +31,40 @@
       </ul>
 
       <!-- Right -->
-      <ul class="navbar-nav" style = "float:right;">
+      <ul class="navbar-nav nav-flex-icons" style = "float:right;">
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link waves-effect">
+          <a class="nav-link waves-effect" href = "{% url 'order_summary' %}">
             <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
             <i class="fas fa-shopping-cart"></i>
-            <span class="clearfix d-sm-inline-block"> Cart </span>
+            <span class="clearfix d-none d-sm-inline-block"> Cart </span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect">
-            <span class="clearfix  d-sm-inline-block"> Logout </span>
+          <a class="nav-link waves-effect" href="{% url 'order_history' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Orders </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href = "{% url 'logout' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Logout </span>
           </a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link waves-effect">
-            <span class="clearfix d-sm-inline-block"> Login </span>
+          <a class="nav-link waves-effect" href = "{% url 'login' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Login </span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link waves-effect">
-            <span class="clearfix  d-sm-inline-block"> Sign Up </span>
+          <a class="nav-link waves-effect" href = "{% url 'register' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Sign Up </span>
           </a>
         </li>
 
         {% endif %}
       </ul>
-
 
     </div>
 
