--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,6 +25,9 @@
             <form class="card-body" method = "post">
               {% csrf_token %}
               <div class = "hideable_shiping_form">
+                {% if form.errors %}
+                <p style = "color:red;text-align:center">Either email or paswword is incorrect.Kindly,note that they may be case sensitive</p>
+                {% endif %}
                 <div class= "row">
                 <input type="text" placeholder="Email" class= "form-control col-lg-6 offset-lg-3  mb-4" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="40" required="" id="id_username">
                 <input type="password" placeholder="Password" class= "form-control col-lg-6 offset-lg-3  mb-4" name="password" autocomplete="current-password" required="" id="id_password">
